--- a/cubeMappedTeapot.html
+++ b/cubeMappedTeapot.html
@@ -183,7 +183,7 @@ precision mediump int;
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
@@ -193,7 +193,7 @@ precision mediump int;
           <div id="title"> cubeMappedTeapot.html </div>
         </h3>
         <h5>
-           An exmple of rendering Utah teapot using Environment Cube Map
+           An example of rendering Utah teapot using Environment Cube Map
 	  </h5> 
   </div>
 
