--- a/teapotFBO.html
+++ b/teapotFBO.html
@@ -175,7 +175,7 @@ precision mediump int;
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
@@ -185,7 +185,7 @@ precision mediump int;
           <div id="title"> teapotFBO.html</div>
         </h3>
         <h5>
-           An exmple of using Frame Buffer Object (FBO)
+           An example of using Frame Buffer Object (FBO)
 	  </h5> 
   </div>
 
