--- a/texture.html
+++ b/texture.html
@@ -168,7 +168,7 @@ precision mediump int;
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
@@ -178,7 +178,7 @@ precision mediump int;
           <div id="title"> code10.html COMMENTS</div>
         </h3>
         <h5>
-           A simple 3D rendering of cube using gl elemenntary array
+           A simple 3D rendering of cube using gl element array
 	  </h5> 
   </div>
 
