--- a/3Dcube.html
+++ b/3Dcube.html
@@ -64,7 +64,7 @@ void main(void) {
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
@@ -74,7 +74,7 @@ void main(void) {
           <div id="title"> 3Dcube.html COMMENTS</div>
         </h3>
         <h5>
-           A simple 3D rendering of cube using gl elemenntary array. Left click mouse button and drag to rotate. 
+           A simple 3D rendering of cube using gl element array. Left click mouse button and drag to rotate. 
 	  </h5> 
   </div>
 
