--- a/hierarchicalXform.html
+++ b/hierarchicalXform.html
@@ -67,7 +67,7 @@ void main(void) {
 
 
     <h4>
-      - Click on the left mouse button and move the coursor to rotate. select square 1, 2, 3 and apply 'X, 'x', 'Y', 'y'
+      - Click on the left mouse button and move the cursor to rotate. select square 1, 2, 3 and apply 'X, 'x', 'Y', 'y'
     </h4>
 
     </h4>
