--- a/simple-transform.html
+++ b/simple-transform.html
@@ -64,7 +64,7 @@ void main(void) {
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
