--- a/textureTeapot.html
+++ b/textureTeapot.html
@@ -168,7 +168,7 @@ precision mediump int;
 
     <div>
     <h4>
-    Click on the left mouse button and move the coursor to rotate
+    Click on the left mouse button and move the cursor to rotate
     </h4>
     <button  onclick="redraw()"> Go Back! </button>
     </div>
